[package]
name = "occstep"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "An event sourcing library based on a distributed log and optimistic concurrency control"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["full"] }